--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header-logo">
             <a href="/">
-                <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+                © BULL'S SHOP
             </a>
         </div>
 
@@ -38,20 +38,22 @@
                         <div class="cart-item-info">
                             <div class="cart-item-text">
                                 <div>{{ item.item.name }}</div>
-                                <div>{{ item.quantity }} шт.</div>
+                                <div class="cart-item-quantity">
+                                    <form name="minus_one" method="post" action="{% url 'minus_one' item.item.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit">-</button>
+                                </form>
+                                    <div>{{ item.quantity }} шт.</div>
+                                    <form name="plus_one" method="post" action="{% url 'plus_one' item.item.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit">+</button>
+                                </form>
+                                </div>
                                 <div>{{ item.get_cost }} ₽</div>
                             </div>
-                            <form name="minus_one" method="post" action="{% url 'minus_one' item.item.id %}">
-                                {% csrf_token %}
-                                <button type="submit">-</button>
-                            </form>
-                            <form name="plus_one" method="post" action="{% url 'plus_one' item.item.id %}">
-                                {% csrf_token %}
-                                <button type="submit">+</button>
-                            </form>
                             <form name="delete" method="post" action="{% url 'remove_from_cart' item.item.id %}">
                                 {% csrf_token %}
-                                <button type="submit">Удалить</button>
+                                <button type="submit" class="cart-button-delete">Удалить</button>
                             </form>
                         </div>
                     </div>
@@ -78,6 +80,17 @@
                 </div>
             </div>
         {% endif %}
+    </div>
+
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-title">© BULL'S SHOP 2025</div>
+            <div class="footer-a">
+                <a href="">Контакты</a>
+                <a href="">Copyright</a>
+                <a href="">Политика конфиденциальности</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
