--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header-logo">
             <a href="/">
-                <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+                © BULL'S SHOP
             </a>
         </div>
 
@@ -37,6 +37,7 @@
             </button>
         </form>
     </div>
+
     <div class="item-grid">
         {% for item in items %}
             <div class="item">
@@ -59,6 +60,17 @@
                 </div>
             </div>
         {% endfor %}
+    </div>
+
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-title">© BULL'S SHOP 2025</div>
+            <div class="footer-a">
+                <a href="">Контакты</a>
+                <a href="">Copyright</a>
+                <a href="">Политика конфиденциальности</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
