--- a/static/css/item.css
+++ b/static/css/item.css
@@ -49,8 +49,7 @@
     color: white;
     border: none;
     box-shadow: 0 0 0.5vw rgba(0, 0, 0, 0.5);
-    opacity: 1;
-    transition: opacity 0.2s;
+    transition: background-color 0.2s;
     font-family: "Unbounded", "Arial";
     cursor: pointer;
     padding: 1.3vw 1vw;
@@ -59,11 +58,11 @@
 }
 
 .item-info button:hover {
-    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .item-info button:active {
-    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .item-info h1,
