--- a/templates/item.html
+++ b/templates/item.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header-logo">
             <a href="/">
-                <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+                © BULL'S SHOP
             </a>
         </div>
 
@@ -51,6 +51,17 @@
             <p>
                 {{ item.description }} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad alias aliquid consectetur dicta dolorum ducimus earum expedita facere harum id ipsa, itaque labore minus molestias mollitia necessitatibus nisi nostrum numquam porro possimus sed sunt temporibus tenetur voluptates? Dicta eius eos expedita fugiat magni perferendis perspiciatis reprehenderit tempore! Dicta, maxime!
             </p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-title">© BULL'S SHOP 2025</div>
+            <div class="footer-a">
+                <a href="">Контакты</a>
+                <a href="">Copyright</a>
+                <a href="">Политика конфиденциальности</a>
+            </div>
         </div>
     </div>
 </body>
