добавил страницу contacts

--- a/templates/item.html
+++ b/templates/item.html
@@ -58,7 +58,7 @@
         <div class="footer-content">
             <div class="footer-title">© BULL'S SHOP 2025</div>
             <div class="footer-a">
-                <a href="">Контакты</a>
+                <a href="contacts/">Контакты</a>
                 <a href="">Copyright</a>
                 <a href="">Политика конфиденциальности</a>
             </div>
