--- a/static/css/general.css
+++ b/static/css/general.css
@@ -71,7 +71,7 @@ body {
 .footer {
     margin-top: 5vw;
     background-color: white;
-    width: 100vw;
+    width: 100%;
     height: 5vw;
     display: flex;
     justify-content: center;
