--- a/static/css/index.css
+++ b/static/css/index.css
@@ -93,8 +93,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.3),
-        inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.2);
+    box-shadow: inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 2301px) {
