--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <title>Mainpage</title>
 </head>
 <body>
+    <script src="/scripts/script.js"></script>
+
     <div class="header">
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
