Первый JavaScript файл с ajax запросами, теперь под поиском появляется инфа во время набора текста, нужно изменить ее на подсказки

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <title>Mainpage</title>
 </head>
 <body>
-    <script src="/scripts/script.js"></script>
+    <script src="/static/scripts/script.js"></script>
 
     <div class="header">
         <div class="header-img">
@@ -38,6 +38,7 @@
                 <img src="/media/media/images/search.svg" alt="">
             </button>
         </form>
+        <p class="search-tips" style="background-color: white; font-size: 2rem;"></p>
     </div>
 
     <div class="item-grid">
