--- a/templates/search.html
+++ b/templates/search.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <script src="/static/scripts/script.js"></script>
+
     <div class="header">
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
@@ -37,6 +39,7 @@
                 <img src="/media/media/images/search.svg" alt="">
             </button>
         </form>
+        <p class="search-tips" style="background-color: white; font-size: 2rem;"></p>
     </div>
 
     <div class="main">
