--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,7 @@
 .search {
+    position: relative;
     margin-top: 19vw;
+    margin-left: 1vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,30 +61,29 @@
     height: 100%;
 }
 
-.search-result {
-    display: flex;
-    justify-content: center;
-}
-
-.search-result-title {
-    margin-top: 19vw;
+.search-tips {
     background-color: white;
-    padding: 1vw 2vw;
-    border-radius: 3vw;
-    box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 4vw;
+    width: 34vw;
+    overflow: hidden;
+    font-size: 1.2rem;
+    border-radius: 1vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    box-shadow: inset 0 0 1vw rgba(0, 0, 0, 0.4);
 }
 
-.search-result-title h1 {
-    font-family: "Unbounded", "Arial";
-    font-size: 2vw;
-    margin: 0;
+.tip1, .tip2, .tip3 {
+    margin-left: 1vw;
 }
 
 .item-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 3vw;
+    margin-top: 7.5vw;
     margin-left: 10vw;
     margin-right: 10vw;
     row-gap: 2vw;
@@ -294,7 +295,7 @@
     height: 15vw;
     padding-top: 1vw;
     padding-bottom: 1vw;
-    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.4),
+    box-shadow: 0 0 1vw rgba(200, 200, 200, 0.4),
         inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.4);
     font-family: "Unbounded", "Arial";
 }
@@ -327,7 +328,7 @@
     margin-top: 0.5vw;
     color: white;
     font-size: clamp(0.4rem, 1.3vw, 2.2rem);
-    box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4),
+    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.4),
                 inset -0.3vw -0.3vw 0.5vw rgba(200, 200, 200, 0.4);
     transition: background-color 0.2s, transform 0.2s;
 }
