--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </button></a>
         </div>
     </div>
-    
+
     <div class="search">
         <form method="get" action="{% url 'search' %}">
             {% csrf_token %}
@@ -38,7 +38,11 @@
                 <img src="/media/media/images/search.svg" alt="">
             </button>
         </form>
-        <p class="search-tips" style="background-color: white; font-size: 2rem;"></p>
+        <div class="search-tips">
+            <div class="tip1"></div>
+            <div class="tip2"></div>
+            <div class="tip3"></div>
+        </div>
     </div>
 
     <div class="item-grid">
