--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -30,7 +30,7 @@
             {{ form.errors }}
         </form>
         <div class="text-center fs-6">
-            <a href="#">Forget password?</a> or <a href="#">Sign up</a>
+            <a href="#">Forget password?</a> or <a href="{% url 'register' %}">Sign up</a>
         </div>
     </div>
 </body>
