--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <script src="/static/scripts/script.js"></script>
 
-    <div class="header">
+    <header>
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
         </div>
@@ -28,7 +28,7 @@
                 <img src="/media/media/images/shop-icon.svg" alt="">
             </button></a>
         </div>
-    </div>
+    </header>
 
     <div class="search">
         <form method="get" action="{% url 'search' %}">
@@ -69,7 +69,7 @@
         {% endfor %}
     </div>
 
-    <div class="footer">
+    <footer>
         <div class="footer-content">
             <div class="footer-title">© BULL'S SHOP 2025</div>
             <div class="footer-a">
@@ -78,6 +78,6 @@
                 <a href="">Политика конфиденциальности</a>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
