--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -1,4 +1,4 @@
-.cart-main {
+main {
     display: flex;
     justify-content: space-between;
     align-items: start;
@@ -210,7 +210,7 @@
     transform: scale(90%);
 }
 
-.cart-main input{
+main input{
     background-color: white;
     padding: 1vw;
     font-size: 2rem;
