--- a/static/css/general.css
+++ b/static/css/general.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
 }
 
-.header {
+header {
     position: fixed;
     top: 0;
 }
@@ -68,8 +68,8 @@ body {
     transform: scale(90%);
 }
 
-.footer {
-    margin-top: 5vw;
+footer {
+    margin-top: 16vw;
     background-color: white;
     width: 100%;
     height: 5vw;
