--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,104 +1,85 @@
-/* Importing fonts from Google */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+main {
+    margin-top: 19vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Unbounded", "Arial";
+}
 
-/* Reseting */
-* {
+footer {
+    margin-top: 10vw;
+}
+
+article {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 5vw;
+    height: 35vw;
+    width: 25vw;
+    border-radius: 3vw;
+    box-shadow: inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.3);
+}
+
+article h1 {
+    margin: 0;
+    font-family: "Rubik Glitch", "Arial";
+    font-size: 2vw;
+}
+
+article form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 1vw;
+}
+
+article form input,
+article form button{
+    padding: 0.7vw 1.3vw;
+    border: none;
+    border-radius: 1vw;
+    background-color: white;
+    box-shadow: inset 0.15vw 0.15vw 0.45vw rgba(0, 0, 0, 0.4);
+    font-size: 1.3vw;
+    font-family: "Unbounded", "Arial";
+    max-width: 15vw;
+}
+
+article form button {
+    margin-top: 0.7vw;
+    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.5),
+        inset 0 0 0.5vw rgba(255, 255, 255, 0.5);
+    background-color: black;
+    color: white;
+    border-radius: 2vw;
+    transition: all 0.2s;
+}
+
+article form button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+article form button:active {
+    transform: scale(95%);
+}
+
+article form h2 {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    max-width: 20vw;
+    max-height: 2.5vw;
+    font-size: 0.8vw;
+    color: crimson;
 }
 
-body {
-    background: #ecf0f3;
-}
-
-.wrapper {
-    max-width: 350px;
-    min-height: 500px;
-    margin: 80px auto;
-    padding: 40px 30px 30px 30px;
-    background-color: #ecf0f3;
-    border-radius: 15px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
-}
-
-.logo {
-    width: 80px;
-    margin: auto;
-}
-
-.logo img {
-    width: 100%;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0px 0px 3px #5f5f5f,
-        0px 0px 0px 5px #ecf0f3,
-        8px 8px 15px #a7aaa7,
-        -8px -8px 15px #fff;
-}
-
-.wrapper .name {
-    font-weight: 600;
-    font-size: 1.4rem;
-    letter-spacing: 1.3px;
-    padding-left: 10px;
-    color: #555;
-}
-
-.wrapper .form-field input {
-    width: 100%;
-    display: block;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 1.2rem;
-    color: #666;
-    padding: 10px 15px 10px 10px;
-    /* border: 1px solid red; */
-}
-
-.wrapper .form-field {
-    padding-left: 10px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
-}
-
-.wrapper .form-field .fas {
-    color: #555;
-}
-
-.wrapper .btn {
-    box-shadow: none;
-    width: 100%;
-    height: 40px;
-    background-color: #03A9F4;
-    color: #fff;
-    border-radius: 25px;
-    box-shadow: 3px 3px 3px #b1b1b1,
-        -3px -3px 3px #fff;
-    letter-spacing: 1.3px;
-}
-
-.wrapper .btn:hover {
-    background-color: #039BE5;
-}
-
-.wrapper a {
+article div a,
+article div span{
+    margin: 0;
+    font-size: 1.1vw;
+    font-style: italic;
     text-decoration: none;
-    font-size: 0.8rem;
-    color: #03A9F4;
-}
-
-.wrapper a:hover {
-    color: #039BE5;
-}
-
-@media(max-width: 380px) {
-    .wrapper {
-        margin: 30px 20px;
-        padding: 40px 15px 15px 15px;
-    }
 }
