--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,31 @@
+.sort {
+    margin-top: 18vw;
+    height: 5vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.btn1,
+.btn2 {
+    background-color: white;
+    border: none;
+    border-radius: 5vw;
+    font-family: "Unbounded", "Arial";
+    box-shadow: inset -5px -5px 10px rgba(0, 0, 0, 0.4);
+    transition: all 0.2s;
+}
+
+.btn1:hover,
+.btn2:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.btn1:active,
+.btn2:active {
+    transform: scale(95%);
+}
+
 .search {
     position: relative;
     margin-top: 19vw;
