--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,6 @@
     <title>Mainpage</title>
 </head>
 <body>
-    <script src="/static/scripts/script.js"></script>
-
     <header>
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
@@ -29,6 +27,11 @@
             </button></a>
         </div>
     </header>
+
+    <div class="sort">
+      <button class="btn1">Сортировать по возрастанию</button>
+      <button class="btn2">Сортировать по убыванию</button>
+    </div>
 
     <div class="search">
         <form method="get" action="{% url 'search' %}">
@@ -79,5 +82,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="/static/scripts/script.js"></script>
 </body>
 </html>
