--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 
     <div class="item-grid">
         {% for item in items %}
-            <div class="item">
+            <div class="item" data-price="{{ item.price }}">
                 <div class="item-img">
                     <a href="{% url 'item_card' item.id %}">
                         <img src="{{ item.image.url }}" alt="">
@@ -82,7 +82,6 @@
             </div>
         </div>
     </footer>
-
     <script src="/static/scripts/script.js"></script>
 </body>
 </html>
