--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -40,7 +40,7 @@
                 <h2>{{ form.errors }}</h2>
             </form>
             <div>
-              <a href="#">Forget password?</a> <span>or</span> <a href="{% url 'register' %}">Sign up</a>
+              <a href="{% url 'password_reset' %}">Forget password?</a> <span>or</span> <a href="{% url 'register' %}">Sign up</a>
             </div>
         </article>
     </main>
