--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <title>Mainpage</title>
 </head>
 <body>
+    <script src="/static/scripts/script.js"></script>
+
     <header>
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
@@ -28,12 +30,29 @@
         </div>
     </header>
 
-    <div class="sort">
-      <button class="btn1">Сортировать по возрастанию</button>
-      <button class="btn2">Сортировать по убыванию</button>
-    </div>
-
     <div class="search">
+        <div class="sort">
+          <div class="sort-drop-button">
+            <img class="sort-arrows" src="/media/media/images/sort_arrows.png">
+            <p class="radio-p">По умолчанию</p>
+            <img class="bottom-arrow" src="/media/media/images/arrow-to-bottom.png">
+          </div>
+          <div class="sort-drop-menu">
+            <div class="sort-drop-row">
+              <input id="radio0" type="radio" name="sort" checked>
+              <label for="radio0">По умолчанию</label>
+            </div>
+            <div class="sort-drop-row">
+              <input id="radio1" type="radio" name="sort">
+              <label for="radio1">По возрастанию цены</label>
+            </div>
+            <div class="sort-drop-row">
+              <input id="radio2" type="radio" name="sort">
+              <label for="radio2">По убыванию цены</label>
+            </div>
+          </div>
+        </div>
+
         <form method="get" action="{% url 'search' %}">
             {% csrf_token %}
             {{ form.as_p }}
@@ -50,7 +69,7 @@
 
     <div class="item-grid">
         {% for item in items %}
-            <div class="item" data-price="{{ item.price }}">
+            <div class="item">
                 <div class="item-img">
                     <a href="{% url 'item_card' item.id %}">
                         <img src="{{ item.image.url }}" alt="">
@@ -82,6 +101,5 @@
             </div>
         </div>
     </footer>
-    <script src="/static/scripts/script.js"></script>
 </body>
 </html>
