--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,6 @@
     <title>Mainpage</title>
 </head>
 <body>
-    <script src="/static/scripts/script.js"></script>
-
     <header>
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
@@ -69,7 +67,7 @@
 
     <div class="item-grid">
         {% for item in items %}
-            <div class="item">
+            <div class="item" data-price="{{ item.price }}">
                 <div class="item-img">
                     <a href="{% url 'item_card' item.id %}">
                         <img src="{{ item.image.url }}" alt="">
@@ -101,5 +99,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="/static/scripts/script.js"></script>
 </body>
 </html>
