--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,14 @@
             <div class="tip3"></div>
         </div>
     </div>
-
+    <div>
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'profile' %}">profile</a>
+            {% else %}
+                <a href="{% url 'login' %}">Log In</a>
+                <a href="{% url 'register' %}">Sign In</a>
+            {% endif %}
+        </div>
     <div class="item-grid">
         {% for item in items %}
             <div class="item" data-price="{{ item.price }}">
