--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,7 +10,8 @@
 <!-- //Custom Theme files -->
 <!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
-<!-- //web font -->
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <!-- //web font -->
 </head>
 <body>
 	<!-- main -->
