--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Ваш пароль был успешно изменен!</h1>
-<a href="{% url 'mainpage' %}">Главная</a>
-<a href="{% url 'profile' %}">Профиль</a>
+<a href="{% url 'shop:mainpage' %}">Главная</a>
+<a href="{% url 'shop:profile' %}">Профиль</a>
 </body>
 </html>
