--- a/static/css/login.css
+++ b/static/css/login.css
@@ -56,6 +56,7 @@ article form button {
     background-color: black;
     color: white;
     border-radius: 2vw;
+    cursor: pointer;
     transition: all 0.2s;
 }
 
