--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,18 @@
             </a>
         </div>
 
+        <div class="profile">
+            {% if request.user.is_authenticated %}
+                <a class="profile-a" href="{% url 'shop:profile' %}">
+                  <img src="/media/media/images/profile.png">
+                  <p class="profile-username">{{ user.username }}</p>
+                </a>
+            {% else %}
+                <a class="profile-login" href="{% url 'login' %}">Log In</a>
+                <a class="profile-register" href="{% url 'shop:register' %}">Sign Up</a>
+            {% endif %}
+        </div>
+
         <div class="cart-icon">
             <a href="/cart"><button class="cart-button">
                 <img src="/media/media/images/shop-icon.svg" alt="">
@@ -28,7 +40,8 @@
         </div>
     </header>
 
-    <div class="search">
+    <main>
+      <div class="search">
         <div class="sort">
           <div class="sort-drop-button">
             <img class="sort-arrows" src="/media/media/images/sort_arrows.png">
@@ -51,7 +64,7 @@
           </div>
         </div>
 
-        <form method="get" action="{% url 'search' %}">
+        <form method="get" action="{% url 'shop:search' %}">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="search-button" type="submit">
@@ -64,19 +77,11 @@
             <div class="tip3"></div>
         </div>
     </div>
-    <div>
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'profile' %}">profile</a>
-            {% else %}
-                <a href="{% url 'login' %}">Log In</a>
-                <a href="{% url 'register' %}">Sign In</a>
-            {% endif %}
-        </div>
-    <div class="item-grid">
+      <div class="item-grid">
         {% for item in items %}
             <div class="item" data-price="{{ item.price }}">
                 <div class="item-img">
-                    <a href="{% url 'item_card' item.id %}">
+                    <a href="{% url 'shop:item_card' item.id %}">
                         <img src="{{ item.image.url }}" alt="">
                     </a>
                 </div>
@@ -86,7 +91,7 @@
                         <h2>{{ item.price }} ₽</h2>
                     </div>
                     <div>
-                        <form method="post" action="{% url 'add_to_cart' item.id %}">
+                        <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
                             {% csrf_token  %}
                             <button type="submit">buy</button>
                         </form>
@@ -95,15 +100,16 @@
             </div>
         {% endfor %}
     </div>
+    </main>
 
     <footer>
         <div class="footer-content">
             <div class="footer-title">© BULL'S SHOP 2025</div>
-            <div class="footer-a">
-                <a>Контакты</a>
+            <nav>
+                <a href="">Контакты</a>
                 <a href="">Copyright</a>
                 <a href="">Политика конфиденциальности</a>
-            </div>
+            </nav>
         </div>
     </footer>
 
