--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
 
       <article>
         <h2 style="font-weight: 400">username: <span class="username">{{ user.username }}</span></h2>
-        <form method="post" action="{% url 'logout' %}?next={% url 'profile' %}">
+        <form method="post" action="{% url 'logout' %}?next={% url 'shop:profile' %}">
             {% csrf_token %}
             <button class="btn btn-primary" type="submit">Log out</button>
 
@@ -48,11 +48,11 @@
     <footer>
         <div class="footer-content">
             <div class="footer-title">© BULL'S SHOP 2025</div>
-            <div class="footer-a">
-                <a>Контакты</a>
+            <nav>
+                <a href="">Контакты</a>
                 <a href="">Copyright</a>
                 <a href="">Политика конфиденциальности</a>
-            </div>
+            </nav>
         </div>
     </footer>
 </body>
