--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Ваш пароль успешно сброшен!</h1>
 <p>Теперь вы можете войти в систему</p>
-<a href="{% url 'login' %}">Войти</a>
+<a href="{% url 'shop:login' %}">Войти</a>
 </body>
 </html>
