--- a/templates/search.html
+++ b/templates/search.html
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-    <script src="/static/scripts/script.js"></script>
-
     <header>
         <div class="header-img">
             <img src="/media/media/images/top_wave.svg" alt="">
@@ -24,6 +22,18 @@
             </a>
         </div>
 
+        <div class="profile">
+            {% if request.user.is_authenticated %}
+                <a class="profile-a" href="{% url 'shop:profile' %}">
+                  <img src="/media/media/images/profile.png">
+                  <p class="profile-username">{{ user.username }}</p>
+                </a>
+            {% else %}
+                <a class="profile-login" href="{% url 'login' %}">Log In</a>
+                <a class="profile-register" href="{% url 'shop:register' %}">Sign Up</a>
+            {% endif %}
+        </div>
+
         <div class="cart-icon">
             <a href="/cart"><button class="cart-button">
                 <img src="/media/media/images/shop-icon.svg" alt="">
@@ -31,7 +41,30 @@
         </div>
     </header>
 
-    <div class="search">
+    <main>
+      <div class="search">
+        <div class="sort">
+          <div class="sort-drop-button">
+            <img class="sort-arrows" src="/media/media/images/sort_arrows.png">
+            <p class="radio-p">По умолчанию</p>
+            <img class="bottom-arrow" src="/media/media/images/arrow-to-bottom.png">
+          </div>
+          <div class="sort-drop-menu">
+            <div class="sort-drop-row">
+              <input id="radio0" type="radio" name="sort" checked>
+              <label for="radio0">По умолчанию</label>
+            </div>
+            <div class="sort-drop-row">
+              <input id="radio1" type="radio" name="sort">
+              <label for="radio1">По возрастанию цены</label>
+            </div>
+            <div class="sort-drop-row">
+              <input id="radio2" type="radio" name="sort">
+              <label for="radio2">По убыванию цены</label>
+            </div>
+          </div>
+        </div>
+
         <form method="get" action="{% url 'shop:search' %}">
             {% csrf_token %}
             {{ form.as_p }}
@@ -39,32 +72,30 @@
                 <img src="/media/media/images/search.svg" alt="">
             </button>
         </form>
-        <p class="search-tips" style="background-color: white; font-size: 2rem;"></p>
-    </div>
-
-    <main>
-        {% if search_results %}
-            <div class="item-grid">
-                {% for item in search_results %}
-                    <div class="item">
-                        <div class="item-img">
-                            <img src="{{ item.image.url }}" alt="">
+        <div class="search-tips"></div>
+      </div>
+      {% if search_results %}
+        <div class="item-grid">
+            {% for item in search_results %}
+                <div class="item" data-price="{{ item.price }}">
+                    <div class="item-img">
+                        <img src="{{ item.image.url }}" alt="">
+                    </div>
+                    <div class="item-info">
+                        <div>
+                            <h1>{{ item.name }}</h1>
+                            <h2>{{ item.price }}</h2>
                         </div>
-                        <div class="item-info">
-                            <div>
-                                <h1>{{ item.name }}</h1>
-                                <h2>{{ item.price }}</h2>
-                            </div>
-                            <div>
-                                <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
-                                    {% csrf_token  %}
-                                    <button type="submit">buy</button>
-                                </form>
-                            </div>
+                        <div>
+                            <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
+                                {% csrf_token  %}
+                                <button type="submit">buy</button>
+                            </form>
                         </div>
                     </div>
-                {% endfor %}
-            </div>
+                </div>
+            {% endfor %}
+        </div>
         {% else %}
             <div class="empty-cart">
                 <div class="empty-cart-info">
@@ -88,5 +119,7 @@
             </nav>
         </div>
     </footer>
+
+    <script src="/static/scripts/script.js"></script>
 </body>
 </html>
